<resources>
    <string name="app_name">Sonic Music Collection</string>
    <string name="settings_option">Settings</string>
    <string name="languageTitle">Language Selection</string>
    <string name="languageChooseTitle">Language</string>
    <string name="languageSummary">Choose a language</string>
    <string name="themeTitle">Theme selection</string>
    <string name="themeChooseTitle">Theme</string>
    <string name="themeSummary">Choose a theme</string>
    <string name="about_option">About</string>
    <string name="aboutMessage">App developed by Ajavalo.\n Sonic is owned by SEGA.</string>
    <string name="see_fav">See Favourites</string>
    <string name="see_all">See All Games</string>
    <string name="tracks_button">Tracks</string>
    <string name="desc_button">Description</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
