<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/languageTitle">
        <ListPreference
            android:key="lang"
            android:title="@string/languageChooseTitle"
            android:summary="@string/languageSummary"
            android:entries="@array/languages"
            android:entryValues="@array/langCodes"
            android:dialogTitle="@string/languageSummary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/themeTitle">
        <ListPreference
            android:key="theme"
            android:title="@string/themeChooseTitle"
            android:summary="@string/themeSummary"
            android:entries="@array/themes"
            android:entryValues="@array/themeCodes"
            android:dialogTitle="@string/themeSummary"/>
    </PreferenceCategory>
</PreferenceScreen>